[package]
name = "sim-by-fired-event"
version = "0.1.0"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
license = "MIT"
edition = "2018"
description="This library is the library of discrete time simulation with event scheduling and firing events at the time."
repository = "https://github.com/ogata-k/sim-by-fired-event"
readme = "README.md"
keywords = ["event", "discrete", "simulation", "science", "easy"]
categories = ["simulation", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"